deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-lookup-api
  namespace: group-lookups
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address-lookup-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: address-lookup-api
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: address-lookup-api
        image: rlintegrationservices.azurecr.io/address-lookup-api:v0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: address-lookup-api
  namespace: group-lookups
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: address-lookup-api
