service.dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: address-lookup-api
  namespace: group-lookups-dev
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: address-lookup-api
